font family and size, fix whitespace

--- a/src/brojac-razumijevanja.css
+++ b/src/brojac-razumijevanja.css
@@ -1,9 +1,10 @@
 html, body, #container{
 	height: 100%;
   	width: 100%;
-	padding:0;
-	margin:0 auto;
+	padding: 0;
+	margin: 0 auto;
 	background-color:#CAC7C5;
+	font-family: sans-serif;
 }
 
 #container{
@@ -13,7 +14,7 @@ html, body, #container{
 }
 
 .glavni{
-	height:75%;
+	height: 75%;
 	border-collapse: collapse;
 	margin-bottom: 1em;
 	
@@ -28,17 +29,17 @@ html, body, #container{
 }
 
 .glavni td{
-	vertical-align:middle;
+	vertical-align: middle;
 	padding: 0.5em;
 }
 
 .smiley{
-	vertical-align:middle;
+	vertical-align: middle;
 	text-align: center;
-	font-size:18vh;
-        width: 1.3em;
-        transition: all 1.0s;
-        transform: rotate(360deg);
+	font-size: 17vh;
+	width: 1.3em;
+	transition: all 1.0s;
+	transform: rotate(360deg);
 }
 
 
@@ -55,9 +56,9 @@ html, body, #container{
 }
 
 .smiley a {
-	color:black;
-	text-decoration:none;
-	border-radius:0.2em;
+	color: black;
+	text-decoration: none;
+	border-radius: 0.2em;
 }
 
 .smiley a:active {
@@ -77,8 +78,7 @@ html, body, #container{
 }
 
 .brojac th{
-	font-family: sans-serif;
-	background-color:#c2b4f1;
+	background-color: #c2b4f1;
 }
 
 .brojac table, .brojac th, .brojac td{
@@ -91,14 +91,12 @@ html, body, #container{
 }
 
 .sakrij {
-	font-family: sans-serif;
 	font-size: large;
 	padding: 0.3em;
 }
 
 .info {
 	margin: 0.1em;
-	font-family: sans-serif;
 }
 
 .right {
